# NodeSynth

./: .gitignore  CMakeLists.txt  PASS.slnx  PASS.vcxproj  PASS.vcxproj.filters  README.md  imgui.ini
_3rd_party/SDL/lib/: SDL3.lib  SDL3_test.lib
_3rd_party/SDL_TTF/lib/: SDL3_ttf.lib
include/: App.hpp  Appstate.hpp  AudioComponent.hpp  AudioComponentHandle.hpp  AudioManager.hpp  AudioSystem.hpp  BufferPool.hpp  Button.hpp  Button_t.h  CLICommands.h  CircularQueue.hpp  ColorMap.hpp  ConfigData.hpp  ConnectionData.hpp  ConnectionHandler.hpp  ConsoleView.h  Debug.hpp  Delay.hpp  DropDownUI.hpp  EditorScene.hpp  Font.hpp  GlobalConfig.hpp  Input.hpp  InputMode.hpp  InputRouter.hpp  MutiStateRenderTarget_t.h  NodeConnector.hpp  NodeContainer.hpp  NodeManager.hpp  NodeUI.hpp  NodeUIHandler.hpp  NodeUIUpdateResult.hpp  OutputNode.hpp  OutputRouter.hpp  Outputs.hpp  PlayContext.h  ProcessorNode.hpp  Rect.hpp  RenderEndpoint_Rect_t.h  Scene.hpp  (+12 more)
source/: App.cpp  AudioComponent.cpp  Button.cpp  CMakeLists.txt  ConnectionHandler.cpp  Delay.cpp  EditorScene.cpp  NodeContainer.cpp  NodeUI.cpp  OutputNode.cpp  SinusoidalOscillator.cpp  main.cpp
